--- a/index.css
+++ b/index.css
@@ -10,3 +10,7 @@ canvas {
     z-index: 1;
 }
 
+@font-face {
+    font-family: 'KoreanFont';
+    src: url('./font/NeoDunggeunmoPro-Regular.ttf') format('truetype');
+}
